crates/resource/tests/probes/credential_bad_key_literal.stderr
error: invalid credential slot key `bad_key_` — must be non-empty, ≤64 bytes, contain only [A-Za-z0-9_.-], not end with a separator, and have no consecutive identical separators
  --> tests/probes/credential_bad_key_literal.rs:15:24
   |
15 |     #[credential(key = "bad_key_")]
   |                        ^^^^^^^^^^
